Базовый клас комманды

--- a/course.csproj
+++ b/course.csproj
@@ -63,7 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="InfraStructure\Commands\Base\Command.cs" />
     <Compile Include="ViewModels\Base\VeiwModel.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -97,7 +99,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="InfraStructure\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
