--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FontAwesome5" version="2.1.11" targetFramework="net472" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.2" targetFramework="net472" developmentDependency="true" />
+  <package id="OxyPlot.Core" version="2.2.0" targetFramework="net472" />
+  <package id="OxyPlot.Wpf" version="2.2.0" targetFramework="net472" />
+  <package id="OxyPlot.Wpf.Shared" version="2.2.0" targetFramework="net472" />
 </packages>
